Add details and improve the backgrounds

--- a/nicepage.css
+++ b/nicepage.css
@@ -42345,7 +42345,7 @@ a.u-link.u-text-hover-grey-90:hover {
   min-height: 16px;
   width: 93px;
   min-width: 42px;
-  margin: -39px auto 5px -47px;
+  margin: -39px auto 5px 0;
 }
 
 .u-header .u-icon-1 {
