--- a/Tom5521-Place.css
+++ b/Tom5521-Place.css
@@ -1,14 +1,14 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/Capturadepantalla_2023-11-05_14-33-19.png");
-  background-position: 50% 50%;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/Capturadepantalla_2023-11-05_14-33-19.png');
+  background-position: 44.22% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 772px;
+  min-height: 839px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 298px auto 0;
+  margin: 365px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -26,23 +26,23 @@
     margin-right: 0;
   }
 } .u-section-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("images/Screenshot_20230923_030221.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('images/Screenshot_20230923_030221.png');
+  background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 551px;
+  min-height: 472px;
 }
 
 .u-section-2 .u-text-1 {
   font-weight: 400;
   font-size: 2.25rem;
-  width: 713px;
-  margin: 0 auto;
+  margin: -68px 229px 0 198px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  margin-top: 0;
-  margin-bottom: 20px;
+  margin-top: -12px;
+  margin-bottom: 21px;
 }
 
 .u-section-2 .u-layout-cell-1 {
@@ -84,6 +84,12 @@
     min-height: 508px;
   }
 
+  .u-section-2 .u-text-1 {
+    width: 713px;
+    margin-left: 98px;
+    margin-right: 129px;
+  }
+
   .u-section-2 .u-layout-cell-1 {
     min-height: 327px;
   }
@@ -112,6 +118,11 @@
     min-height: 249px;
   }
 
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
+    margin-right: 7px;
+  }
+
   .u-section-2 .u-layout-cell-1 {
     min-height: 100px;
   }
@@ -129,6 +140,7 @@
   .u-section-2 .u-text-1 {
     font-size: 1rem;
     width: 540px;
+    margin-right: 0;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -146,7 +158,7 @@
     width: 340px;
   }
 } .u-section-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url("images/cat-space.gif");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('images/cat-space.gif');
   background-position: 50% 50%;
 }
 
@@ -205,7 +217,7 @@
     min-height: 135px;
   }
 } .u-section-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url("images/Capturadepantalla_2023-11-06_03-27-04.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('images/Capturadepantalla_2023-11-06_03-27-04.png');
   background-position: 50% 50%;
 }
 
@@ -328,80 +340,92 @@
     height: 162px;
   }
 } .u-section-5 {
-  background-image: none;
+  background-image: url("images/win10wallpaper.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-5 .u-sheet-1 {
-  min-height: 959px;
+  min-height: 735px;
 }
 
 .u-section-5 .u-text-1 {
-  margin: 9px 26px 0 0;
+  margin: -15px 26px 0 0;
 }
 
 .u-section-5 .u-text-2 {
-  margin: -17px 25px 0 0;
-}
-
-.u-section-5 .u-text-3 {
-  margin: 26px 24px 0 0;
+  margin: 19px 13px 0;
 }
 
 .u-section-5 .u-layout-wrap-1 {
-  margin-top: 0;
-  margin-bottom: 36px;
+  width: 1166px;
+  margin: 53px auto 0 -26px;
 }
 
-.u-section-5 .u-layout-cell-1 {
-  min-height: 218px;
+.u-section-5 .u-image-1 {
+  min-height: 480px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("images/Capturadepantalla_2023-11-07_16-52-09.png");
+  background-position: 50% 50%;
 }
 
 .u-section-5 .u-container-layout-1 {
-  padding: 30px 0;
+  padding: 10px 30px;
 }
 
-.u-section-5 .u-text-4 {
-  font-weight: 400;
-  margin: 9px auto 0;
+.u-section-5 .u-text-3 {
+  margin: 0 auto;
 }
 
 .u-section-5 .u-btn-1 {
+  border-style: solid;
+  letter-spacing: 0px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.u-section-5 .u-text-4 {
+  font-size: 1.875rem;
+  margin: 20px auto 0;
+}
+
+.u-section-5 .u-layout-cell-2 {
+  min-height: 475px;
   background-image: none;
+}
+
+.u-section-5 .u-container-layout-2 {
   padding: 0;
 }
 
 .u-section-5 .u-text-5 {
-  font-size: 1.5rem;
-  margin: 20px 54px 0 30px;
-}
-
-.u-section-5 .u-layout-cell-2 {
-  min-height: 218px;
-}
-
-.u-section-5 .u-container-layout-2 {
-  padding: 30px 30px 0;
-}
-
-.u-section-5 .u-text-6 {
-  font-weight: 400;
-  font-size: 2.25rem;
-  margin: 9px auto 0;
+  margin: 10px auto 0;
 }
 
 .u-section-5 .u-btn-2 {
-  background-image: none;
-  padding: 0;
+  border-style: solid;
+  letter-spacing: 0px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-.u-section-5 .u-text-7 {
-  font-size: 1.5rem;
-  margin: 20px 0 0;
+.u-section-5 .u-text-6 {
+  margin: 26px 0 0;
+}
+
+.u-section-5 .u-image-2 {
+  width: 285px;
+  height: 250px;
+  margin: 17px auto 0 0;
+}
+
+.u-section-5 .u-image-3 {
+  width: 263px;
+  height: 131px;
+  margin: -149px 0 0 auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 922px;
+    min-height: 548px;
   }
 
   .u-section-5 .u-text-1 {
@@ -409,38 +433,36 @@
   }
 
   .u-section-5 .u-text-2 {
-    margin-right: 0;
-  }
-
-  .u-section-5 .u-text-3 {
+    margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-5 .u-layout-wrap-1 {
     position: relative;
-  }
-
-  .u-section-5 .u-layout-cell-1 {
-    min-height: 180px;
-  }
-
-  .u-section-5 .u-text-5 {
-    margin-right: 0;
+    width: 940px;
     margin-left: 0;
   }
 
+  .u-section-5 .u-image-1 {
+    min-height: 387px;
+  }
+
   .u-section-5 .u-layout-cell-2 {
-    min-height: 180px;
+    min-height: 383px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 850px;
+    min-height: 471px;
   }
 
-  .u-section-5 .u-layout-cell-1 {
-    min-height: 100px;
+  .u-section-5 .u-layout-wrap-1 {
+    width: 720px;
+  }
+
+  .u-section-5 .u-image-1 {
+    min-height: 296px;
   }
 
   .u-section-5 .u-layout-cell-2 {
@@ -450,19 +472,199 @@
 
 @media (max-width: 767px) {
   .u-section-5 .u-sheet-1 {
+    min-height: 1077px;
+  }
+
+  .u-section-5 .u-layout-wrap-1 {
+    width: 540px;
+  }
+
+  .u-section-5 .u-image-1 {
+    min-height: 444px;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 795px;
+  }
+
+  .u-section-5 .u-layout-wrap-1 {
+    width: 340px;
+  }
+
+  .u-section-5 .u-image-1 {
+    min-height: 280px;
+  }
+} .u-section-6 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("images/Capturadepantalla_2023-09-29_22-04-33.png");
+  background-position: 50% 50%;
+}
+
+.u-section-6 .u-sheet-1 {
+  min-height: 717px;
+}
+
+.u-section-6 .u-text-1 {
+  margin: 22px 25px 0 0;
+}
+
+.u-section-6 .u-text-2 {
+  margin: 2px 24px 0 0;
+}
+
+.u-section-6 .u-layout-wrap-1 {
+  margin-top: 2px;
+  margin-bottom: 3px;
+}
+
+.u-section-6 .u-layout-cell-1 {
+  min-height: 218px;
+}
+
+.u-section-6 .u-container-layout-1 {
+  padding: 30px 0;
+}
+
+.u-section-6 .u-text-3 {
+  font-weight: 400;
+  margin: 9px auto 0;
+}
+
+.u-section-6 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-6 .u-text-4 {
+  font-size: 1.5rem;
+  margin: 20px 54px 0 30px;
+}
+
+.u-section-6 .u-layout-cell-2 {
+  min-height: 218px;
+}
+
+.u-section-6 .u-container-layout-2 {
+  padding: 30px 30px 0;
+}
+
+.u-section-6 .u-text-5 {
+  font-weight: 400;
+  font-size: 2.25rem;
+  margin: 9px auto 0;
+}
+
+.u-section-6 .u-btn-2 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-6 .u-text-6 {
+  font-size: 1.5rem;
+  margin: 20px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 922px;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-layout-wrap-1 {
+    position: relative;
+  }
+
+  .u-section-6 .u-layout-cell-1 {
+    min-height: 180px;
+  }
+
+  .u-section-6 .u-text-4 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-6 .u-layout-cell-2 {
+    min-height: 180px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 850px;
+  }
+
+  .u-section-6 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-6 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-sheet-1 {
     min-height: 950px;
   }
 
-  .u-section-5 .u-text-5 {
+  .u-section-6 .u-text-4 {
     font-size: 1rem;
   }
 
-  .u-section-5 .u-container-layout-2 {
+  .u-section-6 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-5 .u-text-7 {
+  .u-section-6 .u-text-6 {
     font-size: 1rem;
+  }
+} .u-section-7 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("images/Glfwcompatible.png");
+  background-position: 50% 0%;
+}
+
+.u-section-7 .u-sheet-1 {
+  min-height: 230px;
+}
+
+.u-section-7 .u-text-1 {
+  margin-bottom: 14px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 190px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 146px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 110px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 69px;
   }
 }
