--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,10 @@
-header {
-  background: grey;
-}
-body {
-  background: black;
-  color: white;
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-footer {
-  background: black;
-  text-align: center;
+.to-right {
+  margin-top: 1%;
+  float: right;
 }
 
 .wrap {
