--- a/css/index.css
+++ b/css/index.css
@@ -8,3 +8,13 @@ body {
 footer {
   text-align: center;
 }
+
+.good-item {
+  margin-left: 40px;
+  font-size: 140%;
+}
+
+.good-img {
+  width: 100%;
+  height: 100%;
+}
