Add more fonts and add Setup in index

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,3 +2,8 @@
   font-family: be-vietnam-pro;
   src: url(../fonts/Be_Vietnam_Pro/BeVietnamPro-Regular.ttf);
 }
+
+@font-face {
+  font-family: be-vietnam-pro-black;
+  src: url(../fonts/Be_Vietnam_Pro/BeVietnamPro-Black.ttf);
+}
